[package]
name = "client-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pisolana = { path = "../programs/pisolana", features = ["no-entrypoint"], version = "0.1.0" }
anchor-lang = "0.25.0"
solana-sdk = "1.10.29"
clockwork-sdk = { version = "1.3.9", features = ["client"] }




